Restructure project, add plot renderers!