@@ -2,6 +2,15 @@ ThisBuild / version := "0.1.0-SNAPSHOT"
 
 ThisBuild / scalaVersion := "3.3.3"
 
+ThisBuild / javaOptions ++= Seq(
+    "--add-exports", "java.base/java.lang=ALL-UNNAMED",
+    "--add-exports", "java.desktop/sun.awt=ALL-UNNAMED",
+    "--add-exports", "java.desktop/sun.java2d=ALL-UNNAMED",
+)
+
+resolvers += "Jzy3d Releases" at "https://maven.jzy3d.org/releases/"
+libraryDependencies += "org.jzy3d" % "jzy3d-everything" % "2.2.1"
+
 enablePlugins(JmhPlugin)
 
 lazy val root = (project in file("."))
